@@ -19,8 +19,8 @@
   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 
-#include "rsf.h"
-//#include "sgelfd.h"
+#include <rsf.h>
+
 #ifdef _OPENMP
 #include <omp.h>
 #endif
